--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "redzumi-react-kit",
   "version": "1.0.0",
+
   "scripts": {
-    "webpack": "webpack",
-    "eslint": "eslint",
-    "babel": "babel",
-    "rimraf": "rimraf",
     "prebuild:backend": "eslint --ignore-pattern '/src/service/web/*' src/",
     "build:backend": "babel --ignore service/web --copy-files src -d build",
+
     "prebuild:webservice": "mkdirp build/service/web && eslint src/service/web/service.js",
     "build:webservice": "babel src/service/web/service.js -o build/service/web/service.js",
+
     "prebuild:web": "rimraf build/service/web/assets",
     "build:web": "webpack",
-    "start:web": "cd build/service/web && node service.js",
-    "watch:web": "webpack --watch"
+
+    "prestart:web": "babel tools/webpack/config.babel.js -o webpack.config.js",
+    "start:web": "cd build/service/web && node service.js"
   },
+
   "author": "Redzumi",
   "license": "MIT",
+
   "dependencies": {
     "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
@@ -31,19 +33,20 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-async-await": "^0.0.0",
     "eslint-plugin-react": "^6.9.0",
+    "express": "^4.14.1",
     "extract-text-webpack-plugin": "beta",
     "html-webpack-plugin": "^2.28.0",
-    "koa": "next",
-    "koa-router": "next",
-    "koa-send": "^3.3.0",
     "mkdirp": "^0.5.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
     "react-router": "^3.0.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.0",
     "webpack-merge": "^2.6.1"
   }
 }
