--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "strict": 0,
     "no-undef": 0,
     "no-console": 0,
+    "no-unused-vars": 0,
     "react/display-name": 2,
     "react/jsx-no-duplicate-props": 2,
     "react/jsx-no-undef": 2,
