--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "redzumi-react-kit",
+  "name": "comments-page",
   "version": "1.0.0",
-
   "scripts": {
     "prebuild:backend": "eslint --ignore-pattern '/src/service/web/*' src/",
     "build:backend": "babel --ignore service/web --copy-files src -d build",
-
     "prebuild:webservice": "mkdirp build/service/web && eslint src/service/web/service.js",
     "build:webservice": "babel src/service/web/service.js -o build/service/web/service.js",
-
     "prebuild:web": "rimraf build/service/web/assets",
     "build:web": "webpack",
-
     "prestart:web": "babel tools/webpack/config.babel.js -o webpack.config.js",
     "start:web": "cd build/service/web && node service.js"
   },
-
   "author": "Redzumi",
   "license": "MIT",
-
   "dependencies": {
     "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
@@ -27,6 +21,8 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-3": "^6.22.0",
+    "bootstrap": "4",
     "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.1",
@@ -40,10 +36,15 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "redux": "^3.6.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.1.1",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "style-loader": "^0.13.1",
+    "uuid": "^3.0.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.0",
