--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "html-webpack-plugin": "^2.28.0",
     "mkdirp": "^0.5.1",
     "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "reactstrap": "^4.2.0",
     "redux": "^3.6.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.1.1",
