--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "beta",
     "html-webpack-plugin": "^2.28.0",
+    "immutable": "^3.8.1",
     "mkdirp": "^0.5.1",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
