webpack options, express compression, vendors

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prebuild:web": "rimraf build/service/web/assets",
     "build:web": "webpack",
     "prestart:web": "babel webpack.config.babel.js -o hmr.webpack.config.js",
-    "start:web": "cd build/service/web && node service.js"
+    "start:web": "cd build/service/web && node service.js",
+    "prestart:socket": "yarn build:backend",
+    "start:socket": "cd build/service/socket && node service.js"
   },
   "author": "Redzumi",
   "license": "MIT",
@@ -24,7 +26,6 @@
     "babel-preset-stage-3": "^6.22.0",
     "bootstrap": "4",
     "compression": "^1.6.2",
-    "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.1",
     "eslint-loader": "^1.6.1",
@@ -32,9 +33,11 @@
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "beta",
+    "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "immutable": "^3.8.1",
     "mkdirp": "^0.5.1",
+    "morgan": "^1.8.1",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
@@ -49,7 +52,6 @@
     "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
     "style-loader": "^0.13.1",
-    "uuid": "^3.0.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.0",
